# mistral-ocr-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mistral_ocr_mcp/: __init__.py  http_server.py  server.py
