[project]
name = "mistral-ocr-mcp"
version = "0.1.0"
description = "MCP server for Mistral AI OCR and audio transcription"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "mistral", "ocr", "transcription", "pdf", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "mistralai>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
mistral-ocr-mcp = "mistral_ocr_mcp:main"

[project.urls]
Homepage = "https://github.com/yourusername/mistral-ocr-mcp"
Repository = "https://github.com/yourusername/mistral-ocr-mcp"
Issues = "https://github.com/yourusername/mistral-ocr-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_ocr_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
